# prototorch_models

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .remarkrc  .travis.yml  Jenkinsfile  LICENSE  README.md  deprecated.travis.yml  glvq_iris.ckpt  iris.pth  pyproject.toml  setup.cfg  setup.py
.ci/: gpu.Dockerfile  python310.Dockerfile  python37.Dockerfile  python38.Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: examples.yml  pythonapp.yml
docs/source/: conf.py  custom.rst  index.rst  library.rst  models.rst  refs.bib  tutorial.ipynb  y-architecture.rst
examples/: binnam_tecator.py  binnam_xor.py  cbc_circle.py  cbc_iris.py  cbc_mnist.py  cbc_spiral.py  cbc_spiral_with_GLVQ_start.py  cbc_spiral_with_glvq_start.py  dynamic_components.py  dynamic_pruning.py  gglvq_flag.py  glvq_iris.py  glvq_iris_v1.py  glvq_mnist.py  glvq_spiral.py  gmlvq_iris.py  gmlvq_mnist.py  gmlvq_spiral.py  gmlvq_tecator.py  gng_iris.py  grlvq_iris.py  grlvq_spiral.py  gtlvq_mnist.py  gtlvq_moons.py  knn_iris.py  ksom_colors.py  lgmlvq_moons.py  liramlvq_tecator.py  liranmlvq_tecator.py  lvq1_iris.py  lvq_iris.py  lvqmln_iris.py  median_lvq_iris.py  ng_iris.py  probabilistic.py  rslvq_iris.py  siamese_glvq_iris.py  siamese_gtlvq_iris.py  warm_starting.py  y_architecture_example.py
examples/cli/: README.md  config.yaml  gmlvq.py  gmlvq.yaml  mnist.py
prototorch/models/: .glvq.py.swp  __init__.py  abstract.py  callbacks.py  cbc.py  data.py  extras.py  glvq.py  knn.py  lvq.py  mixin.py  mixins.py  nam.py  neural_gas.py  oneclass.py  probabilistic.py  unsupervised.py  vis.py
prototorch/models/architectures/: base.py  comparison.py  competition.py  components.py  loss.py  optimization.py
prototorch/models/callbacks/: visualization.py
prototorch/models/clcc/: clcc_glvq.py  clcc_scheme.py  test_clcc.py
prototorch/models/expanded/: __init__.py  clcc_glvq.py  clcc_scheme.py  glvq.py  test_clcc.py
prototorch/models/proto_y_architecture/: base.py  callbacks.py  glvq.py  y_architecture_example.py
prototorch/models/y_arch/: __init__.py  callbacks.py
prototorch/plugintemplate/: __init__.py
prototorch/y/: __init__.py  callbacks.py
prototorch/y/architectures/: base.py  comparison.py  competition.py  components.py  loss.py  optimization.py
prototorch/y_arch/: callbacks.py
prototorch/y_arch/architectures/: comparison.py  competition.py  components.py  loss.py  optimization.py
tests/: test.py  test_.py  test_dummy.py  test_examples.sh  test_models.py
(+12 files in other folders)
